Fix slurm_controller to login_node

--- a/roles/slurm/templates/slurm.conf
+++ b/roles/slurm/templates/slurm.conf
@@ -1,5 +1,5 @@
 ClusterName={{ cluster_name }}
-ControlMachine={{ slurm_controller }}
+ControlMachine={{ login_node }}
 SlurmUser=nobody
 SlurmctldPort=6827
 SlurmdPort=6828
