Separate login_node into nfs_server and slurm_server

--- a/roles/slurm/templates/slurm.conf
+++ b/roles/slurm/templates/slurm.conf
@@ -1,5 +1,5 @@
 ClusterName={{ cluster_name }}
-ControlMachine={{ login_node }}
+ControlMachine={{ slurm_server }}
 SlurmUser=nobody
 SlurmctldPort=6827
 SlurmdPort=6828
