Properly generate genders file

--- a/roles/flightenv/tasks/main.yml
+++ b/roles/flightenv/tasks/main.yml
@@ -20,3 +20,9 @@
 - name: Configure global software environment location
   template: src=config.yml dest={{ env_dir['stdout'] }}/etc/config.yml
 
+- name: Install genders
+  template:
+    src: genders
+    dest: /opt/flight/etc/genders
+  tags:
+    - update
