--- a/roles/hunter/tasks/main.yml
+++ b/roles/hunter/tasks/main.yml
@@ -25,7 +25,7 @@
     - update
 
 - name: Collect hunter mac addresses
-  shell: "{% for item in hunter_nodes %} sudo -i /opt/flight/bin/flight hunter show {{ item.4 }} |grep '{{ item.2 }}' -B 2  |grep ':mac:' |sed 's/.*:mac: //g' {%endfor %}"
+  shell: "{% for item in hunter_nodes %} sudo -i /opt/flight/bin/flight hunter show {{ item.4 }} |grep '{{ item.2 }}' -B 2  |grep ':mac:' |sed 's/.*:mac: //g' ;{%endfor %}"
   register: hunter_macs
   delegate_to: localhost
   tags:
