--- a/roles/hunter/tasks/generic.yml
+++ b/roles/hunter/tasks/generic.yml
@@ -41,8 +41,15 @@
     source: "{{ item }}"
     state: enabled
     permanent: yes
-    immediate: yes
   loop: "{{ hunter_macs.stdout_lines }}"
+  tags:
+    - pre
+    - update
+
+- name: Reload firewall
+  systemd:
+    name: firewalld
+    state: reloaded
   tags:
     - pre
     - update
