Add failsafe to intermittent firewall add failure during parallel runs

--- a/roles/hunter/tasks/generic.yml
+++ b/roles/hunter/tasks/generic.yml
@@ -4,7 +4,6 @@
   delegate_to: localhost
   tags:
     - pre
-    - update
 
 - name: Process hunter nodes
   set_fact:
@@ -13,7 +12,6 @@
   delegate_to: localhost
   tags:
     - pre
-    - update
 
 - name: Add hunter nodes to /etc/hosts
   blockinfile:
@@ -25,7 +23,6 @@
       {% endfor %}
   tags:
     - pre
-    - update
 
 - name: Collect hunter mac addresses
   shell: "{% for item in hunter_nodes %} sudo -i /opt/flight/bin/flight hunter show {{ item.label }} |grep '{{ item.ip }}' -B 2  |grep ':mac:' |sed 's/.*:mac: //g' ;{%endfor %}"
@@ -33,7 +30,6 @@
   delegate_to: localhost
   tags:
     - pre
-    - update
 
 - name: Add hunter node mac addresses to firewall
   firewalld:
@@ -42,9 +38,12 @@
     state: enabled
     permanent: yes
   loop: "{{ hunter_macs.stdout_lines }}"
+  register: output
+  retries: 10
+  delay: 1
+  until: output is not failed
   tags:
     - pre
-    - update
 
 - name: Reload firewall
   systemd:
@@ -52,7 +51,6 @@
     state: reloaded
   tags:
     - pre
-    - update
 
 - name: Set hunter label in prompt 
   blockinfile:
@@ -68,5 +66,5 @@
       {% endfor %}
       fi
   tags:
-    - update
+    - pre
 
