--- a/roles/slurm/tasks/generic.yml
+++ b/roles/slurm/tasks/generic.yml
@@ -64,7 +64,7 @@
   when:
     - "'compute' in group_names"
     - not slurm_conf_exists.stat.exists
-    - remove_node != ansible_hostname
+    - remove_node != ansible_fqdn
   tags:
     - update
     - remove
@@ -75,7 +75,7 @@
   when:
     - "'compute' in groups"
     - not slurm_conf_exists.stat.exists
-    - remove_node != ansible_hostname
+    - remove_node != ansible_fqdn
   tags:
     - update
     - remove
