--- a/roles/slurm/tasks/daemon.yml
+++ b/roles/slurm/tasks/daemon.yml
@@ -7,6 +7,8 @@
 
 - name: Turn on SLURM exec daemon
   service: name=flight-slurmd state=restarted enabled=yes
+  when:
+    - remove_node != ansible_fqdn
   tags:
     - update
     - remove
