Process array of nodes

--- a/roles/remove/tasks/hunter.yml
+++ b/roles/remove/tasks/hunter.yml
@@ -1,12 +1,14 @@
 - name: Identify node to be removed
-  shell: "sudo -i /opt/flight/bin/flight hunter list --plain |grep {{ remove_node }}"
+  shell: "sudo -i /opt/flight/bin/flight hunter list --plain |grep {{ item }}"
   register: hunter_show_remove
   delegate_to: localhost
+  loop: "{{ remove_node }}"
 
 - name: Process node to be removed
   set_fact:
-    hunter_node_remove: {'label' : "{{ hunter_show_remove.stdout_lines[0].split('\t').4 }}", 'ip' : "{{ hunter_show_remove.stdout_lines[0].split('\t').2 }}", 'fqdn': "{{ remove_node }}", 'groups': "{{ hunter_show_remove.stdout_lines[0].split('\t').3}}" }
+    hunter_node_remove: "{{ hunter_node_remove | default([]) + [{'label' : hunter_show_remove.stdout_lines[0].split('\t').4, 'ip' : hunter_show_remove.stdout_lines[0].split('\t').2, 'fqdn': item.stdout_lines[0].split('\t').1, 'groups': hunter_show_remove.stdout_lines[0].split('\t').3 }] }}"
   delegate_to: localhost
+  loop: "{{ hunter_show_remove.results }}"
 
 - name: Remove node from /etc/hosts
   lineinfile:
