Handle SLURM with nodes array

--- a/roles/slurm/tasks/daemon.yml
+++ b/roles/slurm/tasks/daemon.yml
@@ -8,7 +8,7 @@
 - name: Turn on SLURM exec daemon
   service: name=flight-slurmd state=restarted enabled=yes
   when:
-    - remove_node != ansible_fqdn
+    - not ansible_fqdn in remove_node
   tags:
     - update
     - remove
