--- a/main.yml
+++ b/main.yml
@@ -10,4 +10,6 @@
     - flightenv
     - role: flightweb
       when: "'login' in group_names"
+    - role: ipa
+      when: "'ipa' in group_names" 
     - user
