--- a/roles/hunter/tasks/main.yml
+++ b/roles/hunter/tasks/main.yml
@@ -1,6 +1,15 @@
 - name: Generic Hunter Tasks
   import_tasks: generic.yml
 
+- name: IPA Server Hunter Tasks
+  import_tasks: ipaserver.yml
+  when: "'identity' in group_names"
+
+- name: IPA Client Hunter Tasks
+  import_tasks: ipaclient.yml
+  when: "'identity' not in group_names"
+
 - name: Login Node Hunter Tasks
   import_tasks: login.yml
   when: "'login' in group_names"
+
