--- a/roles/slurm/tasks/main.yml
+++ b/roles/slurm/tasks/main.yml
@@ -1,5 +1,6 @@
 - name: Perform Generic Configuration
   import_tasks: generic.yml
+  when: "'login' in group_names or 'compute' in group_names"
 
 - name: Perform Controller Configuration
   import_tasks: controller.yml
