Correct "when" blocks for hunter IPA tasks

--- a/roles/hunter/tasks/ipaclient.yml
+++ b/roles/hunter/tasks/ipaclient.yml
@@ -1,6 +1,8 @@
 - name: Identify IPA enrollment password
   set_fact:
     insecure_admin_password: "{{ hostvars[groups['ipa'].0].ipaclientpasswords[ansible_fqdn] }}"
+  when:
+    - "hostvars[groups['ipa'].0].ipastatus.rc == 0"
   tags:
     - never
     - pre
