--- a/roles/hunter/tasks/ipaclient.yml
+++ b/roles/hunter/tasks/ipaclient.yml
@@ -6,7 +6,7 @@
   tags:
     - never
     - pre
-    - post
+    - update
 
 - name: Client already enrolled in IPA?
   stat:
@@ -15,7 +15,7 @@
   tags:
     - never
     - pre
-    - post
+    - update
 
 - name: Join IPA
   command: "ipa-client-install --no-ntp --mkhomedir --ssh-trust-dns --force-join --realm={{ ansible_facts['nodename'].split('.')[1:] |join('.') |upper }} --server={{ ipa_fqdn }} -w {{ insecure_admin_password }} --domain {{ ansible_facts['nodename'].split('.')[1:] |join('.') }} --unattended --hostname={{ ansible_fqdn }}"
@@ -24,4 +24,4 @@
   tags:
     - never
     - pre
-    - post
+    - update
